Fix stripes and scrollbar covering table border

--- a/src/app/components/table.less
+++ b/src/app/components/table.less
@@ -98,6 +98,7 @@
   }
 
   &-table,
+  &-table-inner,
   &-loading {
     height: calc(~"100vh - " (@bar-ht + @statusTotal + @gap + @contact-ht));
   }
